--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server-json": "json-server --watch data/db.json --port 5000"
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1"
   },
   "devDependencies": {
